[metadata]
name = mara-dbt
version = attr: mara_dbt.__version__
url = https://github.com/mara/mara-dbt
description = dbt integration into the Mara Framework
long_description = file: README.md
long_description_content_type = text/markdown
author = Mara contributors
license = MIT

[options]
packages = mara_dbt
python_requires = >= 3.6.2
install_requires =
    click
    mara-pipelines>=3.1.0
    mara-db>=4.7.1
    mara-page>=1.3.0
    PyYAML>=5.4.1

[options.extras_require]
dbt-cloud =
    dbt-cloud-cli >= 0.7.2
